[package]
authors = ["The Rune Developers <developers@hotg.ai>"]
categories = ["science", "wasm"]
description = "Common abstractions and utilities used by Rune runtimes."
edition = "2018"
homepage = "https://hotg.dev/"
keywords = ["rune", "runtime", "tinyml", "machine", "learning"]
license = "MIT OR Apache-2.0"
name = "hotg-rune-runtime"
readme = "README.md"
repository = "https://github.com/hotg-ai/rune"
version = "0.11.3"

[dependencies]
anyhow = "1.0.40"
csv = { version = "1.1.6", optional = true }
hotg-rune-compiler = { version = "^0.11.0", path = "../compiler" }
hotg-rune-core = { version = "^0.11.0", path = "../rune-core", features = ["std"] }
hotg-runecoral = { version = "0.3.12", optional = true }
hound = { version = "3.4.0", optional = true }
image =  { version = "0.23.14", optional = true }
indexmap = { version = "1.8.0", features = ["serde-1"] }
log = "0.4.17"
rand = { version = "0.8.3", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tracing = { version = "0.1.33", features = ["attributes", "log"] }
wasm3 = { git = "https://github.com/wasm3/wasm3-rs", optional = true }
wasmer = { version = "2.2.0-rc2", optional = true }
wasmparser = "0.83.0"
wit-bindgen-wasmer = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer" }
zip =  { version = "0.6.2", optional = true }

[dev-dependencies]
tempfile = "3.2.0"

[features]
default = ["builtins", "tflite", "zune"]
builtins = ["hound", "image", "rand", "rand/small_rng", "csv"]
tflite = ["hotg-runecoral"]
unstable_doc_cfg = []
zune = ["wasmer", "zip"]

[package.metadata.docs.rs]
all-features = true
