[package]
name = "hotg-rune-syntax"
version = "0.5.4-dev"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
description = "Runefile parsing and analysis."
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["science", "parser-implementations"]
keywords = ["rune", "tinyml", "container", "machine", "learning"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = { version = "0.11.0", features = ["serialization"] }
codespan-reporting = "0.11.0"
indexmap = { version = "1.6.2", features = ["serde-1"] }
once_cell = "1.7.2"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.5.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"

[dev-dependencies]
pretty_assertions = "0.7.0"
