[package]
name = "hotg-rune-wasm3-runtime"
version = "0.9.3"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://hotg.dev/"
repository = "https://github.com/hotg-ai/rune"
categories = ["science", "wasm"]
keywords = ["rune", "runtime", "tinyml", "container"]
description = "A Rune runtime backed by wasm3."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.14"
hotg-rune-runtime = { path = "../runtime", version = "^0.9.2"}
hotg-rune-core = { path = "../rune-core", version = "^0.9.2"}
wasm3 = { version = "0.3.1",  features = ["build-bindgen"]}

[dev-dependencies]
tempfile = "3.2.0"
