[package]
name = "rune-wasmer-runtime"
version = "0.4.0-dev"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
log = "0.4.14"
rune-runtime = { path = "../runtime", version = "0.4.0-dev" }
rune-core = { path = "../rune-core", version = "0.4.0-dev" }
wasmer = "2.0"
wasmer-types = "2.0"
wasmer-vm = "2.0"

[dev-dependencies]
tempfile = "3.2.0"
