[package]
name = "xtask"
version = "0.0.1"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
publish = false
description = "Utilities used during development."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
cargo_toml = "0.9.2"
codespan-reporting = "0.11.1"
devx-pre-commit = "0.3.1"
env_logger = "0.8.3"
globset = "0.4.6"
log = "0.4.14"
hotg-rune-syntax = { path = "../syntax", version = "^0.5.0"}
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
walkdir = "2.3.1"
zip = "0.5.11"
