[package]
name = "xtask"
version = "0.3.0"
authors = ["The Rune Developers <developers@hotg.ai>"]
edition = "2018"
publish = false
description = "Utilities used during development."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cargo_toml = "0.10"
env_logger = "0.9"
globset = "0.4.6"
log = "0.4.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3.21"
walkdir = "2.3.1"
zip = "0.5.11"
