[package]
name = "audio_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
cpal = "0.13.3"
hound = "3.4.0"
log = "0.4.14"
dasp = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = "0.11.0"