[package]
name = "bevy_2048"
version = "0.1.0"
authors = ["Meir Klemfner <251.klemp.work@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/MeirKlemp/bevy_2048"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bevy = "0.3.0"
cpal = "0.13.3"
rand = "0.7.3"
rune-wasmer-runtime = { path = "../../wasmer-runtime" }
rune-runtime = { path = "../../runtime" }
runic-types = { path = "../../runic-types" }
runicos-base = { path = "../../images/runicos-base" }
savefile = "0.7.4"
savefile-derive = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8.3"
log = "0.4.14"
