[package]
name = "rune"
version = "0.1.0"
authors = ["HOTG"]
edition = "2018"

[dependencies]
no-std-compat = "0.4.1"
wee_alloc = "0.4.5"
runic-types = { path = "../../runic-types" } #change to github on deployment
runic-transform = { path = "../../runic-transform" }
[lib]
crate-type = ["cdylib"]


[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true




