[package]
name = "sine"
version = "0.1.0"
authors = ["The Rune Developers"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wee_alloc = "0.4.5"
runic-types = { path = "../../runic-types" }


[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
